Ya envia insultos aleatorios jijiji
