# src/routes/index.js
@@ -8,12 +8,18 @@ const sustantivo = require("./sustantivos");
 
 const verbo = require("./verbos");
 
+const insulto = require("./insulto");
+
+const correo = require("./smtp");
+
 router.use("/sustantivos", sustantivo);
 
 router.use("/verbos", verbo);
 
 router.use("/users", users);
 
-// router.use("/mails", mail);
+router.use("/insultos", insulto);
+
+router.use("/correos", correo);
 
 module.exports = router;
